Thu Mar 21 20:33:43 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: new principals were being created with two keys,
	one of which the key_data_ver=0 and had no valid data.

Tue Mar 19 19:42:37 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c:
		changed all references of des-cbc-md5 to des-cbc-crc
		fixed uninitialized variable
		set kvno modulo 256 in database

Wed Feb 21 23:34:31 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: Initialize the length element of the krb5_db_entry
		structure in kadm_princ2entry (add_entry was failing).

Wed Dec 13 03:51:53 1995  Chris Provenzano (proven@mit.edu)

        * kadm_funcs.c : Remove mkvno for krb5_db_entry

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * admin_server.c, kadm_funcs.c kadm_ser_wrap.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * admin_server.c, kadm_funcs.c, kadm_ser_wrap.c : Remove krb5_enctype 
		references, and replace with krb5_keytype where appropriate.

Tue Aug 15 14:31:37 EDT 1995	Paul Park	(pjpark@mit.edu)
	* admin_server,kadm_funcs,kadm_ser_wrap.c - Replace kadm_find_keytype()
		with krb5_dbe_find_keytype().


Thu Aug 10 14:48:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadm_funcs.c - Add kadm_find_keytype() to find a particular key/salt
		pair.  Use this to find keys instead of assuming that the
		right one's in the first slot.
		Fix transposed arguments to strncpy().
		Handle mod_princ_data stuff.
		Supply saltblock to encrypt_key_data().
	* admin_server, kadm_ser_wrap.c - Use kadm_find_keytype() to find keys.


Mon Aug 7 13:30:46 EDT 1995	Paul Park	(pjpark@mit.edu)
	* admin_server,kadm_funcs,kadm_ser_wrap.c - Brute force substitutions
		to get this to compile. 


Mon Jul 17 15:12:30 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadm_ser_wrap.c - Add NULL stash file argument to krb5_db_fetch_mkey.


Fri Jul 7 16:05:11 EDT 1995	Paul Park	(pjpark@mit.edu)